2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/pango/pango-custom.vala:
	fix signature of Pango.Language.to_string

2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vala/valacodenode.vala: include type-name in to_string result
	* vala/valaunaryexpression.vala: implement to_string method,
       fixes bug 470778

2007-08-27  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/clutter-0.3.deps, vapi/clutter-0.3.vala,
	  vapi/clutter-0.4.deps, vapi/clutter-0.4.vala,
	  vapi/packages/clutter-0.3/, vapi/packages/clutter-0.4/: update to
	  Clutter 0.4.1, patch by Alberto Ruiz, fixes bug 470763

2007-08-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/valavapigen.vala: use .deps files to satisfy dependencies,
	  patch by Alberto Ruiz, fixes bug 470756

	* vapi/packages/clutter-0.3/clutter-0.3.deps,
	  vapi/packages/gnome-desktop-2.0/gnome-desktop-2.0.deps,
	  vapi/packages/gtksourceview-2.0/gtksourceview-2.0.deps,
	  vapi/packages/libglade-2.0/libglade-2.0.deps,
	  vapi/packages/libwnck-1.0/libwnck-1.0.deps: add missing dependencies

2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/pango/pango-custom.vala, vapi/pango.vala: 
	add pango_layout_to_string. TODO: support partial classes in vapigen.

2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/enchant.vala: change type of string length paramenters from int
	to long to be compliant with GLib.string.size ().

2007-08-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/gidlgen/gapi2xml.pl: ignore enum values to avoid some pattern
	  matching issues

	* vapi/Makefile.am, vapi/packages/poppler-glib/, vapi/poppler-glib.deps,
	  vapi/poppler-glib.vala: add poppler bindings, patch by Alberto Ruiz,
	  fixes bug 468990

	* vapi/packages/atk/atk.gidl, vapi/packages/gdk-2.0/gdk-2.0.gidl,
	  vapi/packages/gnome-desktop-2.0/gnome-desktop-2.0.gidl,
	  vapi/packages/gstreamer-0.10/gstreamer-0.10.gidl,
	  vapi/packages/gtk+-2.0/gtk+-2.0.gidl,