@@ -1,5 +1,10 @@
 2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
 
+	* vapi/packages/gtk+-2.0/gtk+-2.0-custom.vala,
+	vapi/gtk+-2.0.vala: reintroduce GtkWidgetFlags API
+
+2007-08-27  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
+
 	* vapi/packages/pango/pango-custom.vala:
 	fix signature of Pango.Language.to_string
 
